- Allow loop mode to keep on when invoking Aria with parameter "--reload"
- Fix beat display for uncommon time signatures (7/8, 8/8, 2/2, ...)
- Fix export bug when some controllers were used
- Fix note velocity when sending playback to external device on OSX

1.4.9
- Improve duplicate track settings feature
- Workaround event order issues
- Better handling when file open in Aria is moved/deleted in the file manager
- Fix pitch bend playback on windows
- Fix crash in drum editor
- Fix rendering bug in drum editor when collapsing sections

1.4.8
- Fix bug related to instrument changes
- Improve end of file detection
- Support for editing lyrics
- Correctly handle lyrics events when adding or deleting measures
- Allow deleting instrument through a contextual menu
- Preserve most recent controller values when deleting measures
- Metronome indicates starts of measures

1.4.7
- Fix for .MID and .MIDI files (upper-case extension)
- Workaround wxWidgets bug that caused spinners to disappear on OSX
- Allow navigating between notes with tab and shift-tab
- Now use FluidSynth and not TiMidity as MIDI synthesizer (Linux only)
- Reorganise preferences a bit
- Fix bug when deleting soloed track

1.4.6
- Add 'duplicate track' features
- Add 'recent files' menu
- Implement resizing notes with the mouse cursor
- Allow background tracks in score editor
- Score editor's notation flags (musical and linear notations) are now saved in .aria file
- Add GTK-style scrollbar for Linux systems
- "Select all" and "Unselect all" buttons for background tracks in track properties
- Add keyboard shortcut to change note velocity (Alt + up/down, Alt + pageup/pagedown)
- Update to latest version of libjdksmidi


1.4.5
- Fix bug when saving after exporting MIDI file
- Add 'Mute' and 'Solo'
- Ask for sequence properties on creation
- Add global track volume picker
- Add keyboard shortcuts to change magnetic grid
- Add 'Scroll notes into view' command
- Add tooltips to many track widgets

1.4.4