@@ -1,3 +1,4 @@
+- Add support for bank select controller
 - Allow loop mode to keep on when invoking Aria with parameter "--reload"
 - Fix beat display for uncommon time signatures (7/8, 8/8, 2/2, ...)
 - Fix export bug when some controllers were used
